# deli

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  tests.yml  version.yml
deli/: __init__.py  interface.py  serializer.py
deli/serializers/: __init__.py  choice.py  csv.py  dicom.py  helpers.py  images.py  nifty.py  numpy_.py  packaged.py
tests/: conftest.py  download_files.sh  requirements.txt  synthesize_files.py  test_serializers.py
tests/assets/: file.json  file.pkl  file.txt
